--- a/Week6-Project/Base.lproj/Main.storyboard
+++ b/Week6-Project/Base.lproj/Main.storyboard
@@ -36,6 +36,16 @@
             </objects>
             <point key="canvasLocation" x="2723.913043478261" y="259.15178571428572"/>
         </scene>
+        <!--Setting-->
+        <scene sceneID="VwL-K7-tsL">
+            <objects>
+                <viewControllerPlaceholder storyboardName="Setting" id="ds7-jy-b3Z" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Item" id="4dm-2L-01e"/>
+                </viewControllerPlaceholder>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="zzu-WG-04J" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2720" y="301"/>
+        </scene>
         <!--Home-->
         <scene sceneID="Ra8-9v-mdF">
             <objects>
@@ -61,6 +71,7 @@
                         <segue destination="hGk-dO-OaQ" kind="relationship" relationship="viewControllers" id="cUF-QN-wyz"/>
                         <segue destination="BNY-My-uUB" kind="relationship" relationship="viewControllers" id="7ZU-IG-GJT"/>
                         <segue destination="umQ-cM-FH8" kind="relationship" relationship="viewControllers" id="T3F-Go-KcX"/>
+                        <segue destination="ds7-jy-b3Z" kind="relationship" relationship="viewControllers" id="vi1-zE-Fvg"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="vQ0-JN-AAB" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
