--- a/Week6-Project/Content.storyboard
+++ b/Week6-Project/Content.storyboard
@@ -16,7 +16,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="files_schematic.jpg" translatesAutoresizingMaskIntoConstraints="NO" id="I7R-xY-2yh">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="스크린샷 2021-10-26 오전 9.40.43" translatesAutoresizingMaskIntoConstraints="NO" id="I7R-xY-2yh">
                                 <rect key="frame" x="20" y="108" width="374" height="374"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="I7R-xY-2yh" secondAttribute="height" multiplier="1:1" id="ifr-bn-4JM"/>
@@ -32,7 +32,7 @@
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="plain" title="Today"/>
                                 <connections>
-                                    <action selector="clickedDateButton:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="kMG-wV-E8P"/>
+                                    <action selector="isClickedDateButton:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="sF6-eI-bTu"/>
                                 </connections>
                             </button>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="FL3-8K-Oob">
@@ -66,12 +66,42 @@
                     <connections>
                         <outlet property="addImageView" destination="I7R-xY-2yh" id="OFt-s5-RFc"/>
                         <outlet property="contentTextView" destination="FL3-8K-Oob" id="0GM-SZ-atQ"/>
+                        <outlet property="dateButton" destination="vEy-25-qUz" id="hky-Ls-bQU"/>
                         <outlet property="titleLabel" destination="G0R-HF-Mtr" id="lO1-k0-zAO"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ief-a0-LHa" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1042.0289855072465" y="59.598214285714285"/>
+        </scene>
+        <!--Date Picker View Controller-->
+        <scene sceneID="asB-s1-gRp">
+            <objects>
+                <viewController storyboardIdentifier="DatePickerViewController" id="ZFc-f6-4BJ" customClass="DatePickerViewController" customModule="Week6_Project" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="LWG-1M-pBK">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <datePicker contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="dateAndTime" minuteInterval="1" translatesAutoresizingMaskIntoConstraints="NO" id="JZ5-eM-esh">
+                                <rect key="frame" x="0.0" y="44" width="414" height="818"/>
+                            </datePicker>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="Bvk-Ep-Zp0"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="JZ5-eM-esh" firstAttribute="trailing" secondItem="Bvk-Ep-Zp0" secondAttribute="trailing" id="MgZ-l5-RHU"/>
+                            <constraint firstItem="Bvk-Ep-Zp0" firstAttribute="bottom" secondItem="JZ5-eM-esh" secondAttribute="bottom" id="ZfP-eq-wDr"/>
+                            <constraint firstItem="JZ5-eM-esh" firstAttribute="leading" secondItem="Bvk-Ep-Zp0" secondAttribute="leading" id="hn1-bD-XG8"/>
+                            <constraint firstItem="JZ5-eM-esh" firstAttribute="top" secondItem="Bvk-Ep-Zp0" secondAttribute="top" id="saf-NB-fyj"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="datePicker" destination="JZ5-eM-esh" id="dWu-AG-jMr"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="VXJ-Gi-sGj" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1875" y="60"/>
         </scene>
         <!--Content-->
         <scene sceneID="E54-jL-23n">
@@ -95,8 +125,8 @@
         </scene>
     </scenes>
     <resources>
-        <image name="files_schematic.jpg" width="3260" height="2320"/>
         <image name="octagon" catalog="system" width="128" height="112"/>
+        <image name="스크린샷 2021-10-26 오전 9.40.43" width="263" height="251"/>
         <systemColor name="labelColor">
             <color white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
