--- a/Week6-Project/SearchTableViewCell.xib
+++ b/Week6-Project/SearchTableViewCell.xib
@@ -15,53 +15,51 @@
                 <rect key="frame" x="0.0" y="0.0" width="730" height="281"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="titleLabel" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5fW-8n-Rrb">
-                        <rect key="frame" x="20" y="55" width="300" height="22"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="spF-uP-qsx">
+                        <rect key="frame" x="36" y="72" width="200" height="100"/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="22" id="JoI-HD-b1y"/>
-                            <constraint firstAttribute="width" constant="300" id="lxF-YT-G9P"/>
+                            <constraint firstAttribute="width" constant="200" id="VdN-Vc-Vtt"/>
+                            <constraint firstAttribute="height" constant="100" id="lez-eW-bmu"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <nil key="textColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="titleLabel" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5fW-8n-Rrb">
+                        <rect key="frame" x="36" y="15" width="200" height="20.5"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="200" id="yze-rG-Wfd"/>
                         </constraints>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="date" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6Si-O8-bfQ">
-                        <rect key="frame" x="20" y="85" width="300" height="22"/>
+                        <rect key="frame" x="36" y="43.5" width="200" height="20.5"/>
                         <constraints>
-                            <constraint firstAttribute="width" constant="300" id="LNf-0p-vDi"/>
-                            <constraint firstAttribute="height" constant="22" id="QUf-b7-gYg"/>
+                            <constraint firstAttribute="width" constant="200" id="TgO-lt-G0y"/>
                         </constraints>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Of8-ed-ToI">
-                        <rect key="frame" x="531" y="61" width="159" height="159"/>
+                        <rect key="frame" x="629" y="100" width="81" height="81"/>
                         <constraints>
-                            <constraint firstAttribute="width" secondItem="Of8-ed-ToI" secondAttribute="height" multiplier="1:1" id="sIf-tT-xXK"/>
+                            <constraint firstAttribute="width" secondItem="Of8-ed-ToI" secondAttribute="height" multiplier="1:1" id="IAC-12-2jd"/>
                         </constraints>
                     </imageView>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="spF-uP-qsx">
-                        <rect key="frame" x="20" y="115" width="300" height="100"/>
-                        <constraints>
-                            <constraint firstAttribute="height" constant="100" id="ZXM-Y6-4ED"/>
-                            <constraint firstAttribute="width" constant="300" id="y9n-gZ-pEl"/>
-                        </constraints>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                        <nil key="textColor"/>
-                        <nil key="highlightedColor"/>
-                    </label>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="5fW-8n-Rrb" firstAttribute="leading" secondItem="kTs-9e-6YM" secondAttribute="leading" constant="20" id="PKh-bP-Zh6"/>
-                    <constraint firstItem="Of8-ed-ToI" firstAttribute="top" secondItem="kTs-9e-6YM" secondAttribute="top" constant="61" id="RcR-fV-f91"/>
-                    <constraint firstItem="6Si-O8-bfQ" firstAttribute="top" secondItem="5fW-8n-Rrb" secondAttribute="bottom" constant="8" id="cZ6-qm-wpM"/>
-                    <constraint firstItem="spF-uP-qsx" firstAttribute="top" secondItem="6Si-O8-bfQ" secondAttribute="bottom" constant="8" id="cqk-Qo-OMO"/>
-                    <constraint firstItem="5fW-8n-Rrb" firstAttribute="top" secondItem="kTs-9e-6YM" secondAttribute="top" constant="55" id="eNU-hO-Lyi"/>
-                    <constraint firstItem="6Si-O8-bfQ" firstAttribute="leading" secondItem="kTs-9e-6YM" secondAttribute="leadingMargin" id="nLg-v4-jLM"/>
-                    <constraint firstItem="spF-uP-qsx" firstAttribute="leading" secondItem="kTs-9e-6YM" secondAttribute="leadingMargin" id="oh6-wD-Gr9"/>
-                    <constraint firstAttribute="trailing" secondItem="Of8-ed-ToI" secondAttribute="trailing" constant="40" id="wMN-pN-Wo2"/>
-                    <constraint firstAttribute="bottom" secondItem="Of8-ed-ToI" secondAttribute="bottom" constant="61" id="xsM-AH-zsk"/>
+                    <constraint firstAttribute="trailing" secondItem="Of8-ed-ToI" secondAttribute="trailing" constant="20" symbolic="YES" id="APh-wT-bZl"/>
+                    <constraint firstItem="6Si-O8-bfQ" firstAttribute="top" secondItem="5fW-8n-Rrb" secondAttribute="bottom" constant="8" id="JYD-tq-gMx"/>
+                    <constraint firstItem="5fW-8n-Rrb" firstAttribute="top" secondItem="kTs-9e-6YM" secondAttribute="topMargin" constant="4" id="bC0-Ar-15m"/>
+                    <constraint firstItem="5fW-8n-Rrb" firstAttribute="leading" secondItem="kTs-9e-6YM" secondAttribute="leadingMargin" constant="16" id="bJ6-MB-XxP"/>
+                    <constraint firstItem="spF-uP-qsx" firstAttribute="top" secondItem="6Si-O8-bfQ" secondAttribute="bottom" constant="8" id="bVF-Ai-voo"/>
+                    <constraint firstItem="Of8-ed-ToI" firstAttribute="top" secondItem="kTs-9e-6YM" secondAttribute="top" constant="100" id="o3N-YF-Bvk"/>
+                    <constraint firstItem="6Si-O8-bfQ" firstAttribute="leading" secondItem="kTs-9e-6YM" secondAttribute="leadingMargin" constant="16" id="rvk-mr-ScW"/>
+                    <constraint firstAttribute="bottom" secondItem="Of8-ed-ToI" secondAttribute="bottom" constant="100" id="ta7-oL-VOa"/>
+                    <constraint firstItem="spF-uP-qsx" firstAttribute="leading" secondItem="kTs-9e-6YM" secondAttribute="leadingMargin" constant="16" id="uUj-gI-fOb"/>
                 </constraints>
             </tableViewCellContentView>
             <connections>
